# rust-restful-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2019-01-13-114533_create_post/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/posts/: handlers.rs  mod.rs  models.rs  queries.rs  routes.rs
