[package]
name = "rust_restful_api"
version = "0.1.0"
authors = ["heyyyoyy <heyyyoyy@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
